--- a/index.html
+++ b/index.html
@@ -11,34 +11,61 @@
         <a href="index.html" class="ventas">
             <img src="./imagenes/logo.png" alt="Logo" class="logo">
         </a>
-        <h1>RockCompany Armamento</h1>
+        <h1>RockCompany Videos</h1>
         <section class="iniciador">
-            <a href="indexlogin.html" class="iniciar"><h2>Iniciar Sesion</h2></a>
-            <a href="indexregistro.html" class="registrar"><h2>Registrarse</h2></a>
+            <a href="#" class="iniciar"><h2>Iniciar Sesion</h2></a>
+            <a href="#" class="registrar"><h2>Registrarse</h2></a>
         </section>
     </header>
+    <section>
+        <h1><h1 class="titulo">Membresias de Servicio</h1></h1>
+    </section>
     <main class="contenedor">
-        <div class="caja1">
-            <h2>Glock 19X</h2>
-            <p>La glock 19x es una pistola de calibre 9mm de una gran capacidad de municion capaz de ser equipada con varios accesorios muy utiles para el combate como miras, supresores, linternas, laseres, etc. Sus meteriales son muy resistentes al clima y es de facil mantenimiento.
-            </p>
-            <img src="imagenes/Glock 19x.jpg" alt="Glock 19x">
-            <a href="indexventa.html"><button class="boton">Ver Mas</button></a>
-        </div>
-            <div class="caja2">
-            <h2>P90</h2>
-            <p>La P90 es un subfusil de tipo bullpup lo cual permite una facil adaptacion a cualquier usuario. Tambien se le pueden equivar varios accesorios para mejorar la experiencia como supresores, miras, linternas, etc. Esta hecha de materiales livianos y duraderos y su cargador promedio es de 30 cartuchos.
-            </p>
-            <img src="imagenes/P90.png" alt="P90">
-            <a href="indexventa2.html"><button class="boton">Ver Mas</button></a>
-        </div>
-        <div class="caja3">
-            <h2>Barret Cal.50</h2>
-            <p>El mitico rifle antimateria de Barret es un fusil de presicion ultra poderoso capaz de atravezar casi cualquier tipo de material haciendo casi imparable. Su cartucho propiedio es de 5 cartuchos aunque puede ser ampliado a 10 en algunas versiones. El uso de este rifle no es para cualquiera gracias a su fuerte retroceso.
-            </p>
-            <img src="imagenes/Barret.jpg" alt="Barret .50">
-            <a href="indexventa3.html"><button class="boton">Ver Mas</button></a>
-        </div>
+            <div class="caja1">
+                <h2>Estandar</h2>
+                <p>
+                    <ul class="lista">
+                        <li>Videos HD</li>
+                        <li>Subida mejorada</li>
+                        <li>Comunidad de acceso simple</li>
+                        <li>Videos 4K</li>
+                        <li>Control de comentarios</li>
+                        <li>Alcance Maximo</li>
+                    </ul>
+                </p>
+                <img src="imagenes/Plata.png" alt="Glock 19x">
+                <a href="#"><button class="boton">Ver Mas</button></a>
+            </div>
+                <div class="caja2">
+                <h2>Super</h2>
+                <p>
+                    <ul class="lista">
+                        <li>Videos HD</li>
+                        <li>Subida mejorada</li>
+                        <li>Comunidad de acceso simple</li>
+                        <li>Videos 4K</li>
+                        <li>Control de comentarios</li>
+                        <li>Alcance Maximo</li>
+                    </ul>
+                </p>
+                <img src="imagenes/Oro.png" alt="P90">
+                <a href="#"><button class="boton">Ver Mas</button></a>
+            </div>
+            <div class="caja3">
+                <h2>Premium</h2>
+                <p>
+                    <ul class="lista">
+                        <li>Videos HD</li>
+                        <li>Subida mejorada</li>
+                        <li>Comunidad de acceso simple</li>
+                        <li>Videos 4K</li>
+                        <li>Control de comentarios</li>
+                        <li>Alcance Maximo</li>
+                    </ul>
+                </p>
+                <img src="imagenes/Diamante.png" alt="Barret .50">
+                <a href="#"><button class="boton">Ver Mas</button></a>
+            </div>
     </main>
     <footer class="final">
         <div class="pie">
