--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./imagenes/logo.png" type="image/x-icon">
     <title>RockCompany</title>
 </head>
 <body>
@@ -18,19 +19,15 @@
         </section>
     </header>
     <section>
-        <h1><h1 class="titulo">Membresias de Servicio</h1></h1>
+        <h1 class="titulo">Membresias de Servicio</h1>
     </section>
     <main class="contenedor">
             <div class="caja1">
                 <h2>Estandar</h2>
+                <h4 class="Precio">ARS$1.000</h4>
                 <p>
-                    <ul class="lista">
-                        <li>Videos HD</li>
-                        <li>Subida mejorada</li>
-                        <li>Comunidad de acceso simple</li>
-                        <li>Videos 4K</li>
-                        <li>Control de comentarios</li>
-                        <li>Alcance Maximo</li>
+                    <ul class="lista1">
+                        <li class="item">Videos HD</li>
                     </ul>
                 </p>
                 <img src="imagenes/Plata.png" alt="Glock 19x">
@@ -38,14 +35,14 @@
             </div>
                 <div class="caja2">
                 <h2>Super</h2>
+                <h4 class="Precio">ARS$1.800</h4>
+                <h3 class="recomendado">Mas Recomendado</h3>
                 <p>
-                    <ul class="lista">
-                        <li>Videos HD</li>
-                        <li>Subida mejorada</li>
-                        <li>Comunidad de acceso simple</li>
-                        <li>Videos 4K</li>
-                        <li>Control de comentarios</li>
-                        <li>Alcance Maximo</li>
+                    <ul class="lista2">
+                        <li class="item">Videos HD</li>
+                        <li class="item">Subida mejorada</li>
+                        <li class="item">Comunidad de acceso simple</li>
+                        <li class="item">Videos 4K</li>
                     </ul>
                 </p>
                 <img src="imagenes/Oro.png" alt="P90">
@@ -53,14 +50,15 @@
             </div>
             <div class="caja3">
                 <h2>Premium</h2>
+                <h4 class="Precio">ARS$2.300</h4>
                 <p>
-                    <ul class="lista">
-                        <li>Videos HD</li>
-                        <li>Subida mejorada</li>
-                        <li>Comunidad de acceso simple</li>
-                        <li>Videos 4K</li>
-                        <li>Control de comentarios</li>
-                        <li>Alcance Maximo</li>
+                    <ul class="lista3">
+                        <li class="item">Videos HD</li>
+                        <li class="item">Subida mejorada</li>
+                        <li class="item">Comunidad de acceso simple</li>
+                        <li class="item">Videos 4K</li>
+                        <li class="item">Control de comentarios</li>
+                        <li class="item">Alcance Maximo</li>
                     </ul>
                 </p>
                 <img src="imagenes/Diamante.png" alt="Barret .50">
